# claude-config

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: GITHUB_SYNC_PLAN.md  PHASE2_UPLOAD_PLAN.md  tauri-auto-updater-setup.md
docs/apis-docs/: freemodel-api.md  minimax-api.md
public/: animate.webm
public/logos/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  merge.rs  models.rs  state.rs
src-tauri/src/commands/: github_sync.rs  mod.rs  providers.rs  schedule.rs  settings.rs  subscription.rs  system.rs  tracker.rs  transfer.rs
src-tauri/src/github/: cache.rs  client.rs  device_flow.rs  mod.rs  repo.rs  upload.rs
src-tauri/src/schedule/: cron.rs  mod.rs  os_cron.rs  os_task.rs  primer.rs  runs.rs  store.rs  sync.rs
src-tauri/src/storage/: claude_md.rs  credentials.rs  github_sync.rs  keyring.rs  marketplaces.rs  mcp.rs  mod.rs  permissions.rs  providers.rs  sessions.rs  settings.rs  skills.rs  tracker.rs
src-tauri/src/tracker/: anthropic_admin.rs  anthropic_compat.rs  claude_cli.rs  freemodel.rs  manual_json.rs  minimax.rs  mod.rs  subscription.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActiveBanner.tsx  ClaudeMdEditor.tsx  CustomConfigBanner.tsx  DangerousModeConfirm.tsx  DeleteDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  GitHubSync.tsx  GitHubTopBarButton.tsx  KeyringWarning.tsx  LoopVideo.tsx  Main.tsx  Marketplace.tsx  (+24 more)
(+43 files in other folders)
