[package]
name = "claude-config"
version = "0.1.0"
description = "Claude Config — cross-platform provider manager for Claude Code"
authors = ["claude-config contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
fs2 = "0.4"
dirs = "6"
url = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
